sample/retrieveUnpackaged/objects/Communication__c.object
<CustomObject>
    <fields>
        <fullName>Approved_for_Publishing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved for Publishing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Needs_Communications_Review__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Needs Communications Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Published__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Published</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SEW_Event__c</fullName>
        <label>SEW Event</label>
        <referenceTo>SEW_Event__c</referenceTo>
        <relationshipLabel>Communications</relationshipLabel>
        <relationshipName>Communications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Communication</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Communication Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Communications</pluralLabel>
    <recordTypes>
        <fullName>Email</fullName>
        <active>true</active>
        <label>Email</label>
    </recordTypes>
    <recordTypes>
        <fullName>Facebook</fullName>
        <active>true</active>
        <label>Facebook</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internet</fullName>
        <active>true</active>
        <label>Internet</label>
    </recordTypes>
    <recordTypes>
        <fullName>SMS</fullName>
        <active>true</active>
        <label>SMS</label>
    </recordTypes>
    <recordTypes>
        <fullName>Twitter</fullName>
        <active>true</active>
        <label>Twitter</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>